cmake_minimum_required(VERSION 2.8)
project( opencv_demo )
find_package( OpenCV REQUIRED )
add_executable( Demo01LoadImg Demo01LoadImg.cpp )
add_executable( Demo02ImgRGBInRangeFilter Demo02ImgRGBInRangeFilter.cpp )
add_executable( WebCamCircleDetect WebCamCircleDetect.cpp )
add_executable( Demo03imwrite Demo03imwrite.cpp )
add_executable( Demo04Mat Demo04Mat.cpp )

target_link_libraries( Demo01LoadImg ${OpenCV_LIBS} )
target_link_libraries( Demo02ImgRGBInRangeFilter ${OpenCV_LIBS} )
target_link_libraries( WebCamCircleDetect ${OpenCV_LIBS} )
target_link_libraries( Demo03imwrite ${OpenCV_LIBS} )
target_link_libraries( Demo04Mat ${OpenCV_LIBS} )
