cmake_minimum_required(VERSION 2.8)
project( opencv_demo )
find_package( OpenCV REQUIRED )
add_executable( Demo01LoadImg Demo01LoadImg.cpp )
add_executable( Demo02ImgRGBInRangeFilter Demo02ImgRGBInRangeFilter.cpp )
add_executable( WebCamCircleDetect WebCamCircleDetect.cpp )
add_executable( Demo03imwrite Demo03imwrite.cpp )
add_executable( Demo04Mat Demo04Mat.cpp )
add_executable( WebCamCircleDetectCpp WebCamCircleDetectCpp.cpp )
add_executable( Demo05Time Demo05Time.cpp )
add_executable( Demo06scanMat Demo06scanMat.cpp )
add_executable( Demo07Weight Demo07Weight.cpp )
add_executable( Demo08CopyTo Demo08CopyTo.cpp )


target_link_libraries( Demo01LoadImg ${OpenCV_LIBS} )
target_link_libraries( Demo02ImgRGBInRangeFilter ${OpenCV_LIBS} )
target_link_libraries( WebCamCircleDetect ${OpenCV_LIBS} )
target_link_libraries( Demo03imwrite ${OpenCV_LIBS} )
target_link_libraries( Demo04Mat ${OpenCV_LIBS} )
target_link_libraries( WebCamCircleDetectCpp ${OpenCV_LIBS} )
target_link_libraries( Demo05Time ${OpenCV_LIBS} )
target_link_libraries( Demo06scanMat ${OpenCV_LIBS} )
target_link_libraries( Demo07Weight ${OpenCV_LIBS} )
target_link_libraries( Demo08CopyTo ${OpenCV_LIBS} )


