cmake_minimum_required(VERSION 2.8)
project( opencv_demo )
find_package( OpenCV REQUIRED )

add_executable( Deme11PutText               Deme11PutText.cpp)
add_executable( Demo01LoadImg               Demo01LoadImg.cpp)
add_executable( Demo02ImgRGBInRangeFilter   Demo02ImgRGBInRangeFilter.cpp)
add_executable( Demo03imwrite               Demo03imwrite.cpp)
add_executable( Demo04Mat                   Demo04Mat.cpp)
add_executable( Demo05Time                  Demo05Time.cpp)
add_executable( Demo06scanMat               Demo06scanMat.cpp)
add_executable( Demo07Weight                Demo07Weight.cpp)
add_executable( Demo08CopyTo                Demo08CopyTo.cpp)
add_executable( Demo09Brightness            Demo09Brightness.cpp)
add_executable( Demo10BasicDraw             Demo10BasicDraw.cpp)
add_executable( Demo12XmlYal                Demo12XmlYal.cpp)
add_executable( Demo21ErodingDilating       Demo21ErodingDilating.cpp)
add_executable( Demo22Morphological         Demo22Morphological.cpp)
add_executable( Demo23pyrUpDown             Demo23pyrUpDown.cpp)
add_executable( Demo24ThresholdingOperator  Demo24ThresholdingOperator.cpp)
add_executable( Demo25Filter2d              Demo25Filter2d.cpp)
add_executable( Demo26Border                Demo26Border.cpp)
add_executable( Demo27Derivatives           Demo27Derivatives.cpp)
add_executable( Demo28Laplacian             Demo28Laplacian.cpp)
add_executable( Demo29Canny                 Demo29Canny.cpp)
add_executable( Demo30LineDetect            Demo30LineDetect.cpp)
add_executable( Demo31CircleDetect          Demo31CircleDetect.cpp)
add_executable( Demo32Remap                 Demo32Remap.cpp)
add_executable( Demo33Affine                Demo33Affine.cpp)
add_executable( WebCamCircleDetect          WebCamCircleDetect.cpp)
add_executable( WebCamCircleDetectCpp       WebCamCircleDetectCpp.cpp)
add_executable( discrete_fourier_transform  discrete_fourier_transform.cpp)
add_executable( Demo34AffineRotate  Demo34AffineRotate.cpp)
add_executable( Demo35HistogramEqualization  Demo35HistogramEqualization.cpp)
add_executable( Demo36calHist  Demo36calHist.cpp)
add_executable( Demo36compareHist  Demo36compareHist.cpp)
add_executable( Demo37calcBackProject  Demo37calcBackProject.cpp)

target_link_libraries(Deme11PutText  ${OpenCV_LIBS} )
target_link_libraries(Demo01LoadImg  ${OpenCV_LIBS} )
target_link_libraries(Demo02ImgRGBInRangeFilter  ${OpenCV_LIBS} )
target_link_libraries(Demo03imwrite  ${OpenCV_LIBS} )
target_link_libraries(Demo04Mat  ${OpenCV_LIBS} )
target_link_libraries(Demo05Time  ${OpenCV_LIBS} )
target_link_libraries(Demo06scanMat  ${OpenCV_LIBS} )
target_link_libraries(Demo07Weight  ${OpenCV_LIBS} )
target_link_libraries(Demo08CopyTo  ${OpenCV_LIBS} )
target_link_libraries(Demo09Brightness  ${OpenCV_LIBS} )
target_link_libraries(Demo10BasicDraw  ${OpenCV_LIBS} )
target_link_libraries(Demo12XmlYal  ${OpenCV_LIBS} )
target_link_libraries(Demo21ErodingDilating  ${OpenCV_LIBS} )
target_link_libraries(Demo22Morphological  ${OpenCV_LIBS} )
target_link_libraries(Demo23pyrUpDown  ${OpenCV_LIBS} )
target_link_libraries(Demo24ThresholdingOperator  ${OpenCV_LIBS} )
target_link_libraries(Demo25Filter2d  ${OpenCV_LIBS} )
target_link_libraries(Demo26Border  ${OpenCV_LIBS} )
target_link_libraries(Demo27Derivatives  ${OpenCV_LIBS} )
target_link_libraries(Demo28Laplacian  ${OpenCV_LIBS} )
target_link_libraries(Demo29Canny  ${OpenCV_LIBS} )
target_link_libraries(Demo30LineDetect  ${OpenCV_LIBS} )
target_link_libraries(Demo31CircleDetect  ${OpenCV_LIBS} )
target_link_libraries(Demo32Remap  ${OpenCV_LIBS} )
target_link_libraries(Demo33Affine  ${OpenCV_LIBS} )
target_link_libraries(WebCamCircleDetect  ${OpenCV_LIBS} )
target_link_libraries(WebCamCircleDetectCpp  ${OpenCV_LIBS} )
target_link_libraries(discrete_fourier_transform  ${OpenCV_LIBS} )
target_link_libraries(Demo34AffineRotate  ${OpenCV_LIBS} )
target_link_libraries(Demo35HistogramEqualization  ${OpenCV_LIBS} )
target_link_libraries(Demo36calHist  ${OpenCV_LIBS} )
target_link_libraries(Demo36compareHist  ${OpenCV_LIBS} )
target_link_libraries(Demo37calcBackProject  ${OpenCV_LIBS} )
